--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "styled-components": "^5.0.0"
@@ -38,5 +39,10 @@
   "main": "index.js",
   "repository": "https://github.com/Sub2n/bolt-auction.git",
   "author": "Sub2n <95su1208@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "1.19.1"
+  }
 }
