--- a/package.json
+++ b/package.json
@@ -6,23 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "normalize.css": "^8.0.1",
-    "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "styled-components": "^5.0.0"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -43,6 +36,10 @@
   "devDependencies": {
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "1.19.1"
+    "prettier": "1.19.1",
+    "normalize.css": "^8.0.1",
+    "qs": "^6.9.1",
+    "styled-components": "^5.0.0",
+    "react-icons": "^3.9.0"
   }
 }
