--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,10 +38,10 @@
   "devDependencies": {
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "1.19.1",
     "normalize.css": "^8.0.1",
+    "prettier": "1.19.1",
     "qs": "^6.9.1",
-    "styled-components": "^5.0.0",
-    "react-icons": "^3.9.0"
+    "react-icons": "^3.9.0",
+    "styled-components": "^5.0.0"
   }
 }
