--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "react": "^16.12.0",
     "react-awesome-styled-grid": "^3.0.3",
     "react-dom": "^16.12.0",
