--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-awesome-styled-grid": "^3.0.3",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
