--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-awesome-styled-grid": "^3.0.3",
     "react-dom": "^16.12.0",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.1.3",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
