--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-stomp": "^5.0.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "sockjs-client": "^1.4.0"
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.10.0",
