--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "proxy": "http://18.190.79.25:8080",
   "dependencies": {
+    "@stomp/stompjs": "^5.4.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -38,7 +39,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "sockjs-client": "^1.4.0"
+    "sockjs-client": "^1.4.0",
+    "websocket": "^1.0.31"
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.10.0",
