--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "websocket": "^1.0.31"
   },
   "devDependencies": {
