--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "react": "^16.12.0",
     "react-awesome-styled-grid": "^3.0.3",
     "react-dom": "^16.12.0",
+    "react-infinite": "^0.13.0",
     "react-moment": "^0.9.7",
     "react-redux": "^7.1.3",
     "react-responsive-carousel": "^3.1.51",
